--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,24 @@
-mne>=1.5.0
-yasa>=0.6.0
-numpy>=1.21.0
+# System Dependencies (install via brew):
+# 1. Install pandoc for markdown to PDF conversion:
+#    brew install pandoc
+#
+# 2. Install BasicTeX (smaller than full TeX Live):
+#    brew install --cask basictex
+#
+# 3. IMPORTANT: After installing basictex:
+#    - Restart your terminal
+#    - The pdflatex binary should be available at /Library/TeX/texbin/pdflatex
+
+# Python Dependencies
+numpy>=1.20.0
 pandas>=1.3.0
-matplotlib>=3.5.0
-ipywidgets>=7.6.0
-jupyter>=1.0.0
-notebook>=6.4.0
-PyQt5>=5.15.0
-pymatreader>=0.0.10
+matplotlib>=3.4.0
+mne>=1.0.0
+yasa>=0.6.0
+scipy>=1.7.0
+scikit-learn>=0.24.0
+h5py>=3.0.0
+PyYAML>=5.4.0
+tqdm>=4.60.0
+joblib>=1.0.0
+antropy>=0.1.0
